SlangNet.Bindings/Generated/Slang.cs

using System;
using System.Runtime.InteropServices;

namespace SlangNet;

public static unsafe partial class Slang
{
    public const int SLANG_DIAGNOSTIC_FLAG_VERBOSE_PATHS = 0x01;
    public const int SLANG_DIAGNOSTIC_FLAG_TREAT_WARNINGS_AS_ERRORS = 0x02;

    public const int SLANG_COMPILE_FLAG_NO_MANGLING = 1 << 3;
    public const int SLANG_COMPILE_FLAG_NO_CODEGEN = 1 << 4;
    public const int SLANG_COMPILE_FLAG_OBFUSCATE = 1 << 5;
    public const int SLANG_COMPILE_FLAG_NO_CHECKING = 0;
    public const int SLANG_COMPILE_FLAG_SPLIT_MIXED_TYPES = 0;

    public const int SLANG_TARGET_FLAG_PARAMETER_BLOCKS_USE_REGISTER_SPACES = 1 << 4;
    public const int SLANG_TARGET_FLAG_GENERATE_WHOLE_PROGRAM = 1 << 8;
    public const int SLANG_TARGET_FLAG_DUMP_IR = 1 << 9;
    public const int SLANG_TARGET_FLAG_GENERATE_SPIRV_DIRECTLY = 1 << 10;

    [NativeTypeName("const SlangTargetFlags")]
    public const uint kDefaultTargetFlags = 0;

    /// <include file='Slang.xml' path='doc/member[@name="Slang.CreateSession"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spCreateSession", ExactSpelling = true)]
    [return: NativeTypeName("SlangSession *")]
    public static extern IGlobalSession* CreateSession([NativeTypeName("const char *")] sbyte* deprecated = null);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.DestroySession"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spDestroySession", ExactSpelling = true)]
    public static extern void DestroySession([NativeTypeName("SlangSession *")] IGlobalSession* session);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SessionSetSharedLibraryLoader"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSessionSetSharedLibraryLoader", ExactSpelling = true)]
    public static extern void SessionSetSharedLibraryLoader([NativeTypeName("SlangSession *")] IGlobalSession* session, ISlangSharedLibraryLoader* loader);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SessionGetSharedLibraryLoader"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSessionGetSharedLibraryLoader", ExactSpelling = true)]
    public static extern ISlangSharedLibraryLoader* SessionGetSharedLibraryLoader([NativeTypeName("SlangSession *")] IGlobalSession* session);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SessionCheckCompileTargetSupport"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSessionCheckCompileTargetSupport", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int SessionCheckCompileTargetSupport([NativeTypeName("SlangSession *")] IGlobalSession* session, SlangCompileTarget target);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SessionCheckPassThroughSupport"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSessionCheckPassThroughSupport", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int SessionCheckPassThroughSupport([NativeTypeName("SlangSession *")] IGlobalSession* session, SlangPassThrough passThrough);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.AddBuiltins"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spAddBuiltins", ExactSpelling = true)]
    public static extern void AddBuiltins([NativeTypeName("SlangSession *")] IGlobalSession* session, [NativeTypeName("const char *")] sbyte* sourcePath, [NativeTypeName("const char *")] sbyte* sourceString);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.GetBuildTagString"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spGetBuildTagString", ExactSpelling = true)]
    [return: NativeTypeName("const char *")]
    public static extern sbyte* GetBuildTagString();

    /// <include file='Slang.xml' path='doc/member[@name="Slang.CreateCompileRequest"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spCreateCompileRequest", ExactSpelling = true)]
    [return: NativeTypeName("SlangCompileRequest *")]
    public static extern ICompileRequest* CreateCompileRequest([NativeTypeName("SlangSession *")] IGlobalSession* session);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.DestroyCompileRequest"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spDestroyCompileRequest", ExactSpelling = true)]
    public static extern void DestroyCompileRequest([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetFileSystem"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetFileSystem", ExactSpelling = true)]
    public static extern void SetFileSystem([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, ISlangFileSystem* fileSystem);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetCompileFlags"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetCompileFlags", ExactSpelling = true)]
    public static extern void SetCompileFlags([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, [NativeTypeName("SlangCompileFlags")] uint flags);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.GetCompileFlags"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spGetCompileFlags", ExactSpelling = true)]
    [return: NativeTypeName("SlangCompileFlags")]
    public static extern uint GetCompileFlags([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetDumpIntermediates"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetDumpIntermediates", ExactSpelling = true)]
    public static extern void SetDumpIntermediates([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int enable);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetDumpIntermediatePrefix"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetDumpIntermediatePrefix", ExactSpelling = true)]
    public static extern void SetDumpIntermediatePrefix([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, [NativeTypeName("const char *")] sbyte* prefix);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetLineDirectiveMode"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetLineDirectiveMode", ExactSpelling = true)]
    public static extern void SetLineDirectiveMode([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, SlangLineDirectiveMode mode);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetTargetLineDirectiveMode"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetTargetLineDirectiveMode", ExactSpelling = true)]
    public static extern void SetTargetLineDirectiveMode([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int targetIndex, SlangLineDirectiveMode mode);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetTargetForceGLSLScalarBufferLayout"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetTargetForceGLSLScalarBufferLayout", ExactSpelling = true)]
    public static extern void SetTargetForceGLSLScalarBufferLayout([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int targetIndex, [NativeTypeName("bool")] byte forceScalarLayout);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetCodeGenTarget"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetCodeGenTarget", ExactSpelling = true)]
    public static extern void SetCodeGenTarget([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, SlangCompileTarget target);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.AddCodeGenTarget"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spAddCodeGenTarget", ExactSpelling = true)]
    public static extern int AddCodeGenTarget([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, SlangCompileTarget target);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetTargetProfile"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetTargetProfile", ExactSpelling = true)]
    public static extern void SetTargetProfile([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int targetIndex, SlangProfileID profile);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetTargetFlags"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetTargetFlags", ExactSpelling = true)]
    public static extern void SetTargetFlags([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int targetIndex, [NativeTypeName("SlangTargetFlags")] uint flags);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetTargetFloatingPointMode"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetTargetFloatingPointMode", ExactSpelling = true)]
    public static extern void SetTargetFloatingPointMode([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int targetIndex, SlangFloatingPointMode mode);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.AddTargetCapability"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spAddTargetCapability", ExactSpelling = true)]
    public static extern void AddTargetCapability([NativeTypeName("slang::ICompileRequest *")] ICompileRequest* request, int targetIndex, SlangCapabilityID capability);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetTargetMatrixLayoutMode"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetTargetMatrixLayoutMode", ExactSpelling = true)]
    public static extern void SetTargetMatrixLayoutMode([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int targetIndex, SlangMatrixLayoutMode mode);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetMatrixLayoutMode"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetMatrixLayoutMode", ExactSpelling = true)]
    public static extern void SetMatrixLayoutMode([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, SlangMatrixLayoutMode mode);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetDebugInfoLevel"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetDebugInfoLevel", ExactSpelling = true)]
    public static extern void SetDebugInfoLevel([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, SlangDebugInfoLevel level);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetDebugInfoFormat"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetDebugInfoFormat", ExactSpelling = true)]
    public static extern void SetDebugInfoFormat([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, SlangDebugInfoFormat format);
